--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
-@import url('https://fonts.cdnfonts.com/css/blinker');
+@import url('https://fonts.cdnfonts.com/css/sofia-sans');
 html {
-    background-image: linear-gradient(to bottom right, #845ec2, #008f7a);
+    background-image: linear-gradient(to left top, #1a1a1d, #302a3b, #513857, #79436c, #a64d79);
     background-attachment: fixed;
 }
 header{
-    color: #e6fafc;
-    text-align: center; 
+    color: #fddced;
+    text-align: center;
+    font-family: 'Sofia Sans'; 
 }
-h1, a{
-    font-family: 'Blinker', sans-serif;
+header h1{
+    font-weight: 400;
+}
+main{
+    margin: 24px;
 }
 #nav-container{
     border-radius: 50px;
-    background-color: #e6fafc;
+    background-color: #fdf3f8;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -53,25 +57,46 @@ h1, a{
     width: 100%;
     visibility: visible;
 }
-.container-main{
+.main-container{
     border-radius: 50px; 
-    background: rgba(230,250,252,0.7);
+    background: rgba(255, 255, 255, 0.7);
     padding:20px;
     margin-top: 20px;
 }
-main h1, main section a, p {
+.grid-container{
+    border-radius: 50px;
+    margin-top: 20px;
+}
+#contents h1 {
+    text-align: center;
+}
+.content-links{
+    list-style: none;
+}
+.grid-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 24px;
+}
+.grid-item{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    border-radius: 50px; 
+    background: rgba(255, 255, 255, 0.7);
+}
+main h1, main h2, main a, main li, main p {
     color: black;
-    font-family: 'Blinker', sans-serif;
+    font-family: 'Sofia Sans', sans-serif;
     text-decoration: none;
     margin-left: 30px;
-}
-.grid-main{
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
-    gap: 10px
+    margin-right: 30px;
 }
 .main-link{
-    font-size: larger;
+    font-size: x-large;
     font-weight: 500;
     position: relative;
 }
@@ -96,4 +121,27 @@ main h1, main section a, p {
 }
 p{
     font-size: larger;
+}
+.separator{
+    height: 88px;
+}
+.footer{
+    width: 100%;
+    background-color: rgba(255,255,255,0.9);
+    position: fixed;
+    bottom: 0%;
+    left: 0%;
+    font-family: 'Sofia Sans';
+    text-align: center;
+}
+.footer-list{
+    list-style: none;
+    padding: 24px;
+}
+.footer-list li{
+    display: inline;
+    padding: 50px
+}
+.footer a{
+    color: black;
 }
