--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.cdnfonts.com/css/sofia-sans');
 html {
-    background-image: linear-gradient(to left top, #1a1a1d, #302a3b, #513857, #79436c, #a64d79);
+    background-image: linear-gradient(to left top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
     background-attachment: fixed;
 }
 header{
-    color: #fddced;
+    color: #ffffff;
     text-align: center;
     font-family: 'Sofia Sans'; 
 }
@@ -16,11 +16,11 @@ main{
 }
 #nav-container{
     border-radius: 50px;
-    background-color: #fdf3f8;
+    background-color: #ffffff;
     padding-top: 10px;
     padding-bottom: 10px;
 }
-.navbar-nav{
+.navbar-nav, .content-links{
     list-style: none;
     text-align: center;
 }
@@ -49,7 +49,7 @@ main{
     transform: translateX(-50%);
     width: 0;
     height: 2px;
-    background-color: #005148;
+    background-color: black;
     visibility: hidden;
     transition: 0.3s ease-in-out;
 }
@@ -85,10 +85,24 @@ main{
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
-    border-radius: 50px; 
+    border-radius: 50px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+#welcome{
     background: rgba(255, 255, 255, 0.7);
 }
-main h1, main h2, main a, main li, main p {
+#welcome p, #resume p, #resume li{
+    font-size: x-large;
+}
+#picture-container{
+    max-width: 20%;
+}
+#portrait{
+    border-radius: 50px;
+}
+main h1, main h2, main h3, main a, main li, p {
     color: black;
     font-family: 'Sofia Sans', sans-serif;
     text-decoration: none;
@@ -121,6 +135,22 @@ main h1, main h2, main a, main li, main p {
 }
 p{
     font-size: larger;
+}
+.inline-pics{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 60px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+}
+.pics{
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    gap: 30px
 }
 .separator{
     height: 88px;
